frame/support/test/tests/construct_runtime_ui/missing_module_instance.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub struct Runtime
	{
		system: System::<>,
	}
}

fn main() {}
